--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html {
     font-size: 14px;
+    font-family: Montserrat;
+    color: hsl(212, 21%, 14%);
 }
 
 body {
@@ -12,7 +14,7 @@ body {
 }
 
 .card {
-    min-width: 376px;
+    min-width: 550px;
     width: 30%;
     height: 25%;
     display: flex;
@@ -34,19 +36,69 @@ body {
     min-height: 400px;
 }
 
+.text-block {
+    padding: 25px;
+}
+
 h1 {
     text-transform: uppercase;
-    font-size: 1.15rem;
+    font-size: 0.8rem;
+    font-weight: 600;
+    letter-spacing: 0.3rem;
+    color: hsl(228, 12%, 48%);
 }
 
 h2 {
-    font-size: 2rem;
+    font-size: 2.3rem;
+    font-family: Fraunces;
+    font-weight: 900;
+    line-height: 2.3rem;
 }
 
 p {
-    font-size: 14px;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
+.prices {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.new-price {
+    font-size: 2rem;
+    font-family: Fraunces;
+    font-weight: 700;
+    color: hsl(158, 36%, 37%);
+    margin: 0px;
+    
+}
+
+.old-price {
+    font-size: 1rem;
+    text-decoration: line-through;
+    padding-left: 1.5rem;
+    margin: 0px;
+}
+
+button {
+    background-color: hsl(158, 36%, 37%);
+    border: none;
+    color: hsl(30, 38%, 92%);
+    border-radius: 10px;
+    width: 200px;
+    height: 40px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.material-symbols-outlined {
+    padding-right: 5px;
+    font-size: 1rem !important;
+    font-weight: 500 !important;
+}
 
 
 
