--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ h2 {
     font-family: Fraunces;
     font-weight: 900;
     line-height: 2.3rem;
+    margin: 20px 0px;
 }
 
 p {
@@ -109,11 +110,16 @@ button {
         background-repeat: no-repeat;
         background-size: cover;
         min-width: 100%;
+        min-height: 220px;
     }
 
     .card {
         flex-direction: column;
         min-width: 90%;
+    }
+
+    button {
+        width: 100%;
     }
 }
 
